# ShaderCompilerCS

./: .gitignore  CMakeLists.txt  build.py  test.txt
Glslang.NET/: IncludeHandler.cs  NativeBuffer.cs  NativeResourceHandle.cs
